--- a/donation.html
+++ b/donation.html
@@ -3,30 +3,29 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <title>Noorussalam Madrasa – Donation Page</title>
 
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
+<!-- Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<!-- AOS Animation Library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+
 <style>
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  background: #f8faff;
+  background: #f5f8ff;
   scroll-behavior: smooth;
 }
 
-/* GLOBAL CONTAINER */
-.container {
-  width: 90%;
-  max-width: 1100px;
-  margin: auto;
-}
-
-/* =========================== */
 /* LOADER */
-/* =========================== */
 #loader {
   position: fixed;
   width: 100%;
@@ -49,244 +48,102 @@ body {
 @keyframes spin { to { transform: rotate(360deg); } }
 #loader p { margin-top: 15px; font-size: 18px; color: #1e3a8a; }
 
-
-/* =========================== */
-/* HERO TITLE SECTION */
-/* =========================== */
+/* HERO SECTION */
 .hero {
   text-align: center;
-  padding: 70px 0 40px;
+  padding: 100px 20px 60px;
+  background: linear-gradient(135deg, #1E3A8A, #3B69D1);
+  color: #fff;
 }
-.hero h1 {
-  font-size: 45px;
-  font-weight: 800;
-  color: #0A1E59;
-}
-.hero p {
-  font-size: 20px;
-  margin-top: 10px;
-}
-
-
-/* =========================== */
-/* LIVE COUNTER + DONOR WALL */
-/* =========================== */
-.donor-stats {
-  padding: 80px 0;
-  background: linear-gradient(135deg,#f3f8ff,#ffffff,#f2f9ff);
+.hero h1 { font-size: 50px; font-weight: 800; animation: glowText 2.5s infinite alternate; }
+.hero p { font-size: 20px; margin-top: 10px; color: #f7f7f7; }
+@keyframes glowText {
+  from { text-shadow: 0 0 15px #ffe38a; }
+  to { text-shadow: 0 0 35px #ffd35c; }
 }
 
-.counter-box {
-  text-align: center;
-  margin-bottom: 50px;
-}
-.counter-box h2 {
-  font-size: 32px;
-  font-weight: 700;
-  color: #1E3A8A;
-}
-.counter {
-  font-size: 54px;
-  margin-top: 12px;
-  font-weight: 800;
-  color: #0A1E59;
-}
+/* DONOR STATS */
+.donor-stats { padding: 80px 0; background: #eef5ff; }
+.counter-box { text-align: center; margin-bottom: 50px; }
+.counter-box h2 { font-size: 32px; font-weight: 700; color: #1E3A8A; }
+.counter { font-size: 54px; margin-top: 12px; font-weight: 800; color: #0A1E59; }
 
 .donor-wall {
-  background: #ffffff;
-  padding: 30px;
+  background: #fff; padding: 30px;
   border-radius: 18px;
   box-shadow: 0 8px 22px rgba(0,0,0,0.08);
+  max-width: 600px; margin: auto;
 }
-.donor-wall h3 {
-  font-size: 28px;
-  font-weight: 700;
-  margin-bottom: 18px;
-  color: #1E3A8A;
-}
-#donorList {
-  height: 180px;
-  overflow: hidden;
-  padding-left: 0;
-}
-#donorList li {
-  list-style: none;
-  padding: 10px 0;
-  font-size: 20px;
-  font-weight: 600;
-  border-bottom: 1px dashed #ddd;
-  color: #0A1E59;
-}
+.donor-wall h3 { font-size: 28px; font-weight: 700; margin-bottom: 18px; color: #1E3A8A; text-align: center; }
+#donorList { height: 180px; overflow: hidden; padding-left: 0; }
+#donorList li { list-style: none; padding: 10px 0; font-size: 20px; font-weight: 600; border-bottom: 1px dashed #ddd; color: #0A1E59; }
 
-
-/* =========================== */
 /* UPI PAYMENT SECTION */
-/* =========================== */
-.upi-section {
-  padding: 90px 0;
-  background: #f7faff;
-  text-align: center;
-}
-.upi-title {
-  font-size: 34px;
-  font-weight: 800;
-  color: #1E3A8A;
-}
+.upi-section { padding: 90px 20px; text-align: center; }
+.upi-title { font-size: 38px; font-weight: 800; color: #1E3A8A; margin-bottom: 15px; }
 .upi-sub { font-size: 18px; margin-bottom: 35px; }
 
-.upi-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  flex-wrap: wrap;
-  margin-bottom: 40px;
-}
-
+.upi-buttons { display: flex; justify-content: center; gap: 25px; flex-wrap: wrap; margin-bottom: 40px; }
 .upi-btn {
-  width: 170px;
-  padding: 18px;
+  width: 180px; padding: 18px;
   text-decoration: none;
   background: white;
   border-radius: 16px;
   box-shadow: 0 8px 22px rgba(0,0,0,0.08);
-  font-size: 18px;
-  font-weight: 600;
-  color: #0A1E59;
-  text-align: center;
-  transition: 0.3s;
+  font-size: 18px; font-weight: 600; color: #0A1E59;
+  text-align: center; transition: 0.3s;
 }
-.upi-btn img {
-  height: 45px;
-  margin-bottom: 10px;
-}
-.upi-btn:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 12px 30px rgba(0,0,0,0.12);
-}
+.upi-btn img { height: 50px; margin-bottom: 10px; }
+.upi-btn:hover { transform: translateY(-6px); box-shadow: 0 12px 30px rgba(0,0,0,0.12); }
 
-.qr-box {
-  margin-top: 50px;
-  background: white;
-  display: inline-block;
-  padding: 40px;
-  border-radius: 20px;
-  box-shadow: 0 8px 22px rgba(0,0,0,0.08);
-}
-.qr-box h3 {
-  font-size: 26px;
-  margin-bottom: 20px;
-  color: #1E3A8A;
-}
-.qr-image {
-  width: 260px;
-  height: 260px;
-  border-radius: 14px;
-}
+.qr-box { margin-top: 50px; background: #fff; display: inline-block; padding: 40px; border-radius: 20px; box-shadow: 0 8px 22px rgba(0,0,0,0.08); }
+.qr-box h3 { font-size: 28px; margin-bottom: 20px; color: #1E3A8A; }
+.qr-image { width: 260px; height: 260px; border-radius: 16px; }
 
-
-/* =========================== */
 /* PARALLAX MOSQUE */
-/* =========================== */
 .parallax-mosque {
   background-image: url('https://i.imgur.com/Jitq2I1.png');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  padding: 140px 0;
-  position: relative;
-  text-align: center;
-  color: white;
+  background-size: cover; background-position: center; background-attachment: fixed;
+  padding: 140px 20px; text-align: center; color: white; position: relative;
 }
 .parallax-mosque::before {
-  content: "";
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
+  content: ""; position: absolute; top:0; left:0; width:100%; height:100%;
   background: rgba(0,0,0,0.45);
 }
 .overlay-text { position: relative; }
-.overlay-text h2 {
-  font-size: 42px;
-  font-weight: 800;
-  animation: glowText 3s infinite alternate;
+.overlay-text h2 { font-size: 42px; font-weight: 800; animation: glowText 3s infinite alternate; }
+.overlay-text p { font-size: 18px; margin-top: 15px; }
+
+/* CAMPAIGN COUNTDOWN */
+.campaign { text-align: center; padding: 60px 20px; background: #eef5ff; }
+#countdown { font-size: 36px; font-weight: bold; color: #0A1E59; margin-top: 15px; }
+
+/* ADMIN PANEL */
+.admin-box {
+  background: #ffffff; margin: 60px auto; padding: 35px;
+  max-width: 500px; border-radius: 20px; box-shadow: 0 8px 22px rgba(0,0,0,0.08); text-align: center;
 }
-@keyframes glowText {
-  from { text-shadow: 0 0 12px #ffe38a; }
-  to   { text-shadow: 0 0 25px #ffd35c; }
+.admin-box h2 { font-size: 28px; margin-bottom: 15px; }
+.admin-box input {
+  width: 100%; padding: 14px; border-radius: 10px; border: 1px solid #ccc; margin-bottom: 12px; font-size: 18px;
+}
+.admin-box button {
+  background: #1e3a8a; color: white; border: none; padding: 14px 28px;
+  font-size: 18px; border-radius: 12px; cursor: pointer;
 }
 
-
-/* =========================== */
-/* THEME SWITCH */
-/* =========================== */
+/* THEME TOGGLE */
 .theme-toggle {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  background: #ffffff;
-  width: 55px;
-  height: 55px;
-  border-radius: 50%;
-  box-shadow: 0 4px 18px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  z-index: 9999;
+  position: fixed; top: 20px; right: 20px; background: #ffffff;
+  width: 55px; height: 55px; border-radius: 50%;
+  box-shadow: 0 4px 18px rgba(0,0,0,0.2); display: flex; align-items: center; justify-content: center;
+  cursor: pointer; z-index: 9999;
 }
 .theme-toggle i { font-size: 22px; color: #0A1E59; }
-
 .dark-mode { background: #0b0f19 !important; color: white !important; }
 .dark-mode * { color: white !important; }
 
-
-/* =========================== */
-/* COUNTDOWN TIMER */
-/* =========================== */
-.campaign {
-  text-align: center;
-  padding: 60px 0;
-  background: #eef3ff;
-}
-#countdown {
-  font-size: 32px;
-  font-weight: bold;
-  color: #0A1E59;
-}
-
-
-/* =========================== */
-/* ADMIN PANEL */
-/* =========================== */
-.admin-box {
-  background: #ffffff;
-  margin: 60px auto;
-  padding: 30px;
-  width: 90%;
-  max-width: 500px;
-  border-radius: 20px;
-  box-shadow: 0 8px 22px rgba(0,0,0,0.08);
-  text-align: center;
-}
-.admin-box input {
-  width: 100%;
-  padding: 14px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  margin-bottom: 12px;
-  font-size: 18px;
-}
-.admin-box button {
-  background: #1e3a8a;
-  color: white;
-  border: none;
-  padding: 14px 28px;
-  font-size: 18px;
-  border-radius: 12px;
-  cursor: pointer;
-}
 </style>
-
 </head>
 <body>
 
@@ -296,158 +153,118 @@ body {
   <p>Loading...</p>
 </div>
 
-
 <!-- THEME TOGGLE -->
 <div class="theme-toggle" onclick="toggleTheme()">
   <i id="themeIcon" class="fas fa-moon"></i>
 </div>
 
-
 <!-- HERO -->
-<section class="hero">
+<section class="hero" data-aos="fade-down">
   <h1>Support Noorussalam Madrasa</h1>
   <p>Your donation is Sadaqah Jariyah</p>
 </section>
 
-
-<!-- SECTION 1 — COUNTER + DONOR WALL -->
+<!-- DONOR STATS -->
 <section class="donor-stats">
-  <div class="container">
-
+  <div class="container" data-aos="fade-up">
     <div class="counter-box">
       <h2>Total Donations Collected</h2>
       <div id="totalDonation" class="counter">₹0</div>
     </div>
 
-    <div class="donor-wall">
+    <div class="donor-wall" data-aos="fade-up" data-aos-delay="200">
       <h3>Recent Supporters</h3>
       <ul id="donorList"></ul>
     </div>
-
   </div>
 </section>
 
-
-<!-- SECTION 2 — UPI -->
-<section class="upi-section">
+<!-- UPI PAYMENT -->
+<section class="upi-section" data-aos="zoom-in">
   <div class="container">
-
     <h2 class="upi-title">Donate Easily via UPI</h2>
     <p class="upi-sub">Fast, secure & direct donation</p>
 
     <div class="upi-buttons">
       <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Google_Pay_Logo.svg">
-        Google Pay
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Google_Pay_Logo.svg">Google Pay
       </a>
-
       <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/PhonePe_Logo.svg">
-        PhonePe
+        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/PhonePe_Logo.svg">PhonePe
       </a>
-
       <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Paytm_logo.png">
-        Paytm
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Paytm_logo.png">Paytm
       </a>
     </div>
 
-    <div class="qr-box">
+    <div class="qr-box" data-aos="fade-up" data-aos-delay="200">
       <h3>Scan & Donate</h3>
       <img src="YOUR_QR_IMAGE.png" class="qr-image">
     </div>
   </div>
 </section>
 
-
-<!-- SECTION 3 — PARALLAX MOSQUE -->
-<section class="parallax-mosque">
+<!-- PARALLAX MOSQUE -->
+<section class="parallax-mosque" data-aos="fade-up">
   <div class="overlay-text">
     <h2>“Whoever builds a masjid, Allah will build for him a house in Jannah.”</h2>
     <p>— Prophet Muhammad ﷺ</p>
   </div>
 </section>
 
-
-<!-- SECTION 4 — COUNTDOWN -->
-<section class="campaign">
+<!-- COUNTDOWN -->
+<section class="campaign" data-aos="fade-up">
   <h2>🚀 Special Ramadan Campaign</h2>
   <p>Ends in:</p>
   <div id="countdown"></div>
 </section>
 
-
-<!-- SECTION 5 — ADMIN PANEL -->
-<section class="admin-box">
+<!-- ADMIN PANEL -->
+<section class="admin-box" data-aos="fade-up">
   <h2>🔐 Admin Panel</h2>
   <p>Update total donation amount (frontend only)</p>
   <input type="number" id="newAmount" placeholder="Enter new amount">
   <button onclick="updateTotal()">Update</button>
 </section>
 
-
 <!-- Audio -->
 <audio id="donateSound">
   <source src="https://assets.mixkit.co/sfx/preview/mixkit-software-interface-start-2574.mp3">
 </audio>
 
-
 <!-- SCRIPTS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script>
-// LOADER
-window.onload = () => {
-  setTimeout(() => { document.getElementById("loader").style.display = "none"; }, 900);
-};
+AOS.init({ duration: 1200, once: true, offset: 120 });
 
+// Loader
+window.onload = () => { setTimeout(() => { document.getElementById("loader").style.display = "none"; }, 900); };
 
-// LIVE COUNTER
-let start = 0;
-let end = 452300;
+// Live Counter
+let start = 0, end = 452300;
 setInterval(() => {
-  if (start < end) {
-    start += 1500;
-    document.getElementById("totalDonation").innerHTML = "₹" + start.toLocaleString();
-  }
+  if (start < end) { start += 1500; document.getElementById("totalDonation").innerHTML = "₹" + start.toLocaleString(); }
 }, 20);
 
-
-// DONOR WALL
-let donors = [
-  "Abdul Rahman – ₹500",
-  "Anonymous – ₹2000",
-  "Afsal – ₹1000",
-  "Shahana – ₹250",
-  "Muhammad Ali – ₹2000",
-  "Ashraf – ₹500",
-];
+// Donor Wall
+let donors = ["Abdul Rahman – ₹500","Anonymous – ₹2000","Afsal – ₹1000","Shahana – ₹250","Muhammad Ali – ₹2000","Ashraf – ₹500"];
 let donorList = document.getElementById("donorList");
-donors.forEach(n => {
-  let li = document.createElement("li");
-  li.textContent = n;
-  donorList.appendChild(li);
-});
-setInterval(() => {
-  donorList.scrollTop++;
-  if (donorList.scrollTop >= donorList.scrollHeight - donorList.clientHeight)
-    donorList.scrollTop = 0;
-}, 40);
+donors.forEach(n => { let li = document.createElement("li"); li.textContent = n; donorList.appendChild(li); });
+setInterval(() => { donorList.scrollTop++; if (donorList.scrollTop >= donorList.scrollHeight - donorList.clientHeight) donorList.scrollTop = 0; }, 40);
 
-
-// THEME SWITCH
+// Theme Switch
 function toggleTheme() {
   document.body.classList.toggle("dark-mode");
   document.getElementById("themeIcon").classList.toggle("fa-sun");
   document.getElementById("themeIcon").classList.toggle("fa-moon");
 }
 
-
-// COUNTDOWN
+// Countdown
 let endDate = new Date("March 30, 2025 23:59:59").getTime();
 setInterval(() => {
-  let now = Date.now();
-  let diff = endDate - now;
+  let now = Date.now(), diff = endDate - now;
   let d = Math.floor(diff / (1000*60*60*24));
   let h = Math.floor((diff%(1000*60*60*24))/(1000*60*60));
   let m = Math.floor((diff%(1000*60*60))/(1000*60));
@@ -455,16 +272,11 @@ setInterval(() => {
   document.getElementById("countdown").innerHTML = `${d}d ${h}h ${m}m ${s}s`;
 }, 1000);
 
-
-// ADMIN UPDATE
+// Admin Update
 function updateTotal() {
   let val = Number(document.getElementById("newAmount").value);
-  if (val > 0) {
-    document.getElementById("totalDonation").innerHTML = "₹" + val.toLocaleString();
-    document.getElementById("donateSound").play();
-  }
+  if (val > 0) { document.getElementById("totalDonation").innerHTML = "₹" + val.toLocaleString(); document.getElementById("donateSound").play(); }
 }
 </script>
-
 </body>
 </html>
